force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/eBikes_AWS_Relayed_Events__x.object-meta.xml
<CustomObject>
    <externalDataSource>MB_eBikes_EDS</externalDataSource>
    <externalName>RelayedEvents</externalName>
    <label>eBikes AWS Relayed Events</label>
    <pluralLabel>eBikes AWS Relayed Events</pluralLabel>
</CustomObject>