force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <externalDeveloperName>Comment__c</externalDeveloperName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>