force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>