force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <externalDeveloperName>Detail-Type</externalDeveloperName>
    <label>Event_Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>