force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name__c</externalDeveloperName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>