force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/fields/Payload_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Payload_Field_2__c</fullName>
    <externalDeveloperName>Payload_Field_2__c</externalDeveloperName>
    <label>Payload Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>