force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Created_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Payload_Field_1__c</columns>
    <columns>Payload_Field_2__c</columns>
    <columns>Name__c</columns>
    <columns>Comments__c</columns>
    <columns>ExternalId</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>