force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/listViews/eBike_Private_Connect.listView-meta.xml
<ListView>
    <fullName>eBike_Private_Connect</fullName>
    <columns>ExternalId</columns>
    <columns>Comments__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Name__c</columns>
    <columns>Payload_Field_1__c</columns>
    <columns>Payload_Field_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>eBike_Private_Connect_Event__e</value>
    </filters>
    <label>eBike Private Connect</label>
</ListView>