force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/listViews/Manufacturing_Event.listView-meta.xml
<ListView>
    <fullName>Manufacturing_Event</fullName>
    <columns>ExternalId</columns>
    <columns>Comments__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Payload_Field_1__c</columns>
    <columns>Payload_Field_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>Manufacturing_Event__e</value>
    </filters>
    <label>Manufacturing Event</label>
</ListView>