force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/listViews/Order_Status_Upadte.listView-meta.xml
<ListView>
    <fullName>Order_Status_Upadte</fullName>
    <columns>ExternalId</columns>
    <columns>Comments__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Payload_Field_1__c</columns>
    <columns>Payload_Field_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>ebikesaws__OrderStatusUpdate__e</value>
    </filters>
    <label>Order Status Update</label>
</ListView>