force-app/main/default/objects/eBikes_AWS_Relayed_Events__x/listViews/Report_Event_Stream.listView-meta.xml
<ListView>
    <fullName>Report_Event_Stream</fullName>
    <columns>ExternalId</columns>
    <columns>Name__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Payload_Field_1__c</columns>
    <columns>Payload_Field_2__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Type__c</field>
        <operation>equals</operation>
        <value>ReportEventStream</value>
    </filters>
    <label>Report Events</label>
</ListView>